--- a/clusters/deploy.yaml
+++ b/clusters/deploy.yaml
@@ -36,11 +36,11 @@ spec:
                 - "true"
             topologyKey: "kubernetes.io/hostname"
       containers:
-      - name: udacity
+      - name: capstone
         image: nilay16/capstone:v1
         command: [
           "/bin/bash", 
-          "start_docker.sh"
+          "run_docker.sh"
           ]
         imagePullPolicy: Always
         resources:
@@ -63,7 +63,7 @@ spec:
           failureThreshold: 2
           timeoutSeconds: 1
 
----
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -82,7 +82,7 @@ spec:
       port: 443
       targetPort: 443
       
----
+
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v1
 metadata:
@@ -95,5 +95,3 @@ spec:
   minReplicas: 2
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
-
----
