--- a/clusters/deploy.yaml
+++ b/clusters/deploy.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: capstone
+  name: capstone-app
   labels:
-    app: capstone
+    app: capstone-app
 spec:
   selector:
     matchLabels:
-      app: capstone
+      app: capstone-app
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        app: capstone
+        app: capstone-app
     spec:
       terminationGracePeriodSeconds: 60
       affinity:
@@ -29,14 +29,14 @@ spec:
               - key: "app"
                 operator: In
                 values:
-                - capstone
+                - capstone-app
               - key: "temporary"
                 operator: In
                 values:
                 - "true"
             topologyKey: "kubernetes.io/hostname"
       containers:
-      - name: capstone
+      - name: udacity
         image: nilay16/capstone:v1
         command: [
           "/bin/bash", 
@@ -63,15 +63,14 @@ spec:
           failureThreshold: 2
           timeoutSeconds: 1
 
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: capstone
+  name: capstone-app
 spec:
   type: LoadBalancer
   selector:
-    app: capstone
+    app: capstone-app
   ports:
     - name: helloword-http
       protocol: TCP
@@ -82,16 +81,15 @@ spec:
       port: 443
       targetPort: 443
       
-
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v1
 metadata:
-  name: capstone
+  name: capstone-app
 spec:
   scaleTargetRef:
     apiVersion: extensions/v1beta1
     kind: Deployment
-    name: capstone
+    name: capstone-app
   minReplicas: 2
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
