--- a/clusters/deploy.yaml
+++ b/clusters/deploy.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: capstone-app
+  name: capstone
   labels:
-    app: capstone-app
+    app: capstone
 spec:
   selector:
     matchLabels:
-      app: capstone-app
+      app: capstone
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        app: capstone-app
+        app: capstone
     spec:
       terminationGracePeriodSeconds: 60
       affinity:
@@ -66,11 +66,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: capstone-app
+  name: capstone
 spec:
   type: LoadBalancer
   selector:
-    app: capstone-app
+    app: capstone
   ports:
     - name: helloword-http
       protocol: TCP
@@ -84,12 +84,12 @@ spec:
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v1
 metadata:
-  name: capstone-app
+  name: capstone
 spec:
   scaleTargetRef:
     apiVersion: extensions/v1beta1
     kind: Deployment
-    name: capstone-app
+    name: capstone
   minReplicas: 2
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
